kubernetes/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 8090
      name: ui
    - port: 6811
      name: torrent
